--- a/HotelManagement/src/main/resources/application.properties
+++ b/HotelManagement/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:/hotelmanagement
 spring.datasource.username=root
-spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.password=admin
+#spring.jpa.hibernate.script.sql-auto=create
 spring.jpa.show-sql=true
